--- a/Portal/package.json
+++ b/Portal/package.json
@@ -18,6 +18,7 @@
     "@material-ui/styles": "^4.11.3",
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
+    "@mui/icons-material": "^5.10.9",
     "@react-pdf/renderer": "^2.0.19",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
@@ -32,7 +33,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-google-charts": "^3.0.15",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "react-table": "^6.11.5",
