--- a/Portal/package.json
+++ b/Portal/package.json
@@ -9,6 +9,12 @@
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
+    "@devexpress/dx-react-core": "3.0.4",
+    "@devexpress/dx-react-scheduler": "3.0.4",
+    "@devexpress/dx-react-scheduler-material-ui": "3.0.4",
+    "@mui/lab": "^5.0.0-alpha.51",
+    "@mui/material": "^5.0.4",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
