--- a/Portal/package.json
+++ b/Portal/package.json
@@ -38,14 +38,17 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.1",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^16.14.0",
     "react-google-charts": "^3.0.15",
+    "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^2.1.3",
     "react-syntax-highlighter": "^15.4.3",
     "react-table": "^6.11.5",
     "recharts": "^2.1.16",
-    "tinycolor2": "^1.4.2"
+    "tinycolor2": "^1.4.2",
+    "validator": "^13.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
