--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "react-phone-number-input": "^3.2.19"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
